# garmin-claws

./: .gitignore  AGENTS.md  README.md  pyproject.toml  pytest.ini
schemas/: activity_list.v1.json  daily_coach.v1.json  daily_summary.v1.json  error.v1.json  health_status.v1.json  metric_definition.v1.json  sleep_recovery.v1.json  sleep_summary.v1.json  trainability.v1.json  training_load_balance.v1.json
skills/garmin-claws/: SKILL.md
src/garmin_claws/: auth.py  cli.py  constants.py  errors.py  normalize.py  output.py
src/garmin_claws/commands/: activity.py  auth.py  daily.py  flow.py  health.py  metrics.py  schema.py  sleep.py  training.py
tests/: test_cli.py  test_integration.py
