[project]
name = "garmin-claws"
version = "0.1.0"
description = "Agent-ready Garmin Connect CLI and Hermes skill package"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "James Keane" }]
dependencies = [
  "garminconnect>=0.3.2",
  "typer>=0.12.0",
  "rich>=13.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
garmin-claws = "garmin_claws.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
